[project]
name = "fitness-coach"
version = "0.1.0"
description = "AI fitness coach using OpenAI Agents SDK"
readme = "README.md"
authors = [
    { name = "waleed260", email = "vkdeku20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.3",
]

[project.scripts]
fitness-coach = "fitness_coach:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
